[package]
name = "service-marketplace"
version = "0.1.0"
description = "A 2-sided marketplace for services"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "service_marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["associated_token"] }